# crewai_agents

marketing_optin/: README.md  agents.py  app.py  main.py  pyproject.toml  tasks.py
marketing_optin/data/: 20250213_222243_filtered_customers.csv  20250214_190324_filtered_customers.csv  customers.json  filtered_customers.csv
marketing_optin/tools/: file_handler.py
savings_planner/: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
savings_planner/agents/: agents.py
savings_planner/data/: expenses.csv
savings_planner/tasks/: tasks.py
savings_planner/tools/: tools.py
